* Fixed mathwrapper's missing overflow-y property that caused unnecessary vertical scrollkbar

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/flex/_workspace-materials-defaults.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/flex/_workspace-materials-defaults.scss
@@ -28,6 +28,7 @@
 .math-wrapper {
   max-width: 100%;
   overflow-x: auto;
+  overflow-y: hidden;
 }
 
 // WRAPPER FOR TEXTFIELDS
